# vfio-discord-ipc-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
commons/: Cargo.toml  build.rs
commons/src/: lib.rs  packet.rs
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml
host/src/: discord.rs  main.rs
server/: Cargo.toml
