[package]
name = "commons"
version = "0.1.0"
authors = ["Adamaq01 <adamthibert01@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.1"
uuid = { version = "0.8.1", features = ["serde"] }

[build-dependencies]
vergen = "3.1.0"
