[package]
name = "host"
version = "0.1.0"
authors = ["Adamaq01 <adamthibert01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
parity-tokio-ipc = "0.7.0"
# pretty-hex = "0.1.1"
tokio = { version = "0.2.22", features = ["io-driver", "io-util", "uds", "stream", "rt-core", "macros", "time", "net", "tcp", "sync"] }
bytes = "0.5.6"
interfaces = "0.0.4"
async-trait = "0.1.36"
clap = "3.0.0-beta.1"
futures = "0.3.5"
uuid = { version = "0.8.1", features = ["v4"] }
